# envoy-filter-benchmark

./: .gitignore  README.md  bench.sh
envoy-base/: Dockerfile  docker-compose.yaml  envoy.yaml
golang-basic-auth/: Dockerfile  config.go  docker-compose.yaml  envoy.yaml  filter.go  go.mod  go.sum
golang-passthrough/: Dockerfile  docker-compose.yaml  envoy.yaml  go.mod  go.sum
lua-basic-auth/: basic-auth.lua  docker-compose.yaml  envoy.yaml
lua-passthrough/: docker-compose.yaml  envoy.yaml  passthrough.lua
report-into-readme/: Cargo.toml  Dockerfile  docker-compose.yaml
report-into-readme/src/: config.rs  convert.rs  generate.rs  main.rs  parse.rs
report-into-readme/template/: readme.hbs
wasm-rust-basic-auth/: Cargo.toml  docker-compose.yaml  envoy.yaml
wasm-rust-basic-auth/src/: lib.rs
wasm-rust-passthrough/: Cargo.toml  Dockerfile  docker-compose.yaml  envoy.yaml
wasm-rust-passthrough/src/: lib.rs
wasm-tinygo-basic-auth/: Dockerfile  docker-compose.yaml  envoy.yaml  go.mod  go.sum  main.go
wasm-tinygo-passthrough/: Dockerfile  docker-compose.yaml  go.mod  go.sum  main.go  nginx.conf
