[package]
name = "report-into-readme"
publish = false
version = "0.1.0"
authors = ["Dengwu Wang <me@dengwu.wang>"]
description = "Report into README.md"
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
handlebars = "4.4.0"
charming = { git = "https://github.com/yuankunzhang/charming", version = "0.2.4", features = ["ssr"] }